异步编程案例

--- a/00Pratice/02advanced/07asyncio.ipynb
+++ b/00Pratice/02advanced/07asyncio.ipynb
@@ -4,38 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Table of contents**<a id='toc0_'></a>    \n",
-    "1. [协程&Asyncio&异步编程](#toc1_)    \n",
-    "1.1. [协程](#toc1_1_)    \n",
-    "1.1.1. [greenlet实现协程](#toc1_1_1_)    \n",
-    "1.1.2. [通过yield关键字实现协程](#toc1_1_2_)    \n",
-    "1.1.3. [asyncio实现协程](#toc1_1_3_)    \n",
-    "1.1.4. [async & await关键字实现协程](#toc1_1_4_)    \n",
-    "1.2. [协程意义](#toc1_2_)    \n",
-    "1.3. [异步编程](#toc1_3_)    \n",
-    "1.3.1. [事件循环](#toc1_3_1_)    \n",
-    "1.3.2. [快速上手](#toc1_3_2_)    \n",
-    "1.3.3. [await](#toc1_3_3_)    \n",
-    "1.3.4. [Task对象](#toc1_3_4_)    \n",
-    "1.3.5. [asyncio的Future对象](#toc1_3_5_)    \n",
-    "1.3.6. [concurrent.futures.Future对象](#toc1_3_6_)    \n",
-    "1.3.7. [异步迭代器](#toc1_3_7_)    \n",
-    "\n",
-    "<!-- vscode-jupyter-toc-config\n",
-    "\tnumbering=true\n",
-    "\tanchor=true\n",
-    "\tflat=true\n",
-    "\tminLevel=1\n",
-    "\tmaxLevel=6\n",
-    "\t/vscode-jupyter-toc-config -->\n",
-    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. <a id='toc1_'></a>[协程&Asyncio&异步编程](#toc0_)\n",
+    "# 协程&Asyncio&异步编程\n",
     "---\n",
     "为什么要讲？\n",
     "- 越来越多的学生来问async异步相关问题，并且这一部分的知识点不太容易学习（异步非阻塞、asyncio）。\n",
@@ -46,7 +15,7 @@
     "- 第二部分：asyncio模块进行异步编程。\n",
     "- 第三部分：实战案例。\n",
     "\n",
-    "## 1.1. <a id='toc1_1_'></a>[协程](#toc0_)\n",
+    "## 协程\n",
     "---\n",
     "协程不是计算机提供，程序员人为创造。\n",
     "\n",
@@ -97,7 +66,7 @@
     "- asyncio装饰器（py3.4）\n",
     "- async、await关键字（py3.5）[推荐]\n",
     "\n",
-    "### 1.1.1. <a id='toc1_1_1_'></a>[greenlet实现协程](#toc0_)\n"
+    "### greenlet实现协程\n"
    ]
   },
   {
@@ -143,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1.2. <a id='toc1_1_2_'></a>[通过yield关键字实现协程](#toc0_)"
+    "### 通过yield关键字实现协程"
    ]
   },
   {
@@ -183,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1.3. <a id='toc1_1_3_'></a>[asyncio实现协程](#toc0_)\n",
+    "### asyncio实现协程\n",
     "在python3.4及之后的版本"
    ]
   },
@@ -228,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1.4. <a id='toc1_1_4_'></a>[async & await关键字实现协程](#toc0_)\n",
+    "### async & await关键字实现协程\n",
     "用asyncio提供的@asyncio.coroutine可以把一个generator标记为coroutine类型，然后在coroutine内部用yield from调用另一个coroutine实现异步操作。\n",
     "\n",
     "为了简化并更好地标识异步IO，从Python 3.5开始引入了新的语法async和await，可以让coroutine的代码更简洁易读。\n",
@@ -277,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2. <a id='toc1_2_'></a>[协程意义](#toc0_)\n",
+    "## 协程意义\n",
     "---\n",
     "在一个线程中如果遇到IO等待时间，线程不会傻傻等，利用空闲的时候再去干点其他事。\n",
     "\n",
@@ -384,9 +353,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3. <a id='toc1_3_'></a>[异步编程](#toc0_)\n",
+    "## 异步编程\n",
     "---\n",
-    "### 1.3.1. <a id='toc1_3_1_'></a>[事件循环](#toc0_)\n",
+    "### 事件循环\n",
     "理解成为一个死循环，去检测并执行某些代码。\n",
     "\n",
     "- 伪代码\n",
@@ -424,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.2. <a id='toc1_3_2_'></a>[快速上手](#toc0_)\n",
+    "### 快速上手\n",
     "协程函数(coroutine function)： 定义函数时候 async def 函数名。\n",
     "\n",
     "协程对象(coroutine object)：执行协程函数() 得到的协程对象。"
@@ -491,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.3. <a id='toc1_3_3_'></a>[await](#toc0_)\n",
+    "### await\n",
     "await + 可等待对象（协程对象、Future、Task对象 -> IO等待）\n",
     "\n",
     "示例1："
@@ -634,7 +603,7 @@
    "source": [
     "await就是等待对象的值得到结果之后再继续向下走\n",
     "\n",
-    "### 1.3.4. <a id='toc1_3_4_'></a>[Task对象](#toc0_)\n",
+    "### Task对象\n",
     "\n",
     ">任务 被用来“并行的”调度协程</br>\n",
     ">当一个协程通过 asyncio.create_task() 等函数被封装为一个 任务，该协程会被自动调度执行:\n",
@@ -803,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.5. <a id='toc1_3_5_'></a>[asyncio的Future对象](#toc0_)\n",
+    "### asyncio的Future对象\n",
     "\n",
     ">Future 是一种特殊的 低层级 可等待对象，表示一个异步操作的 最终结果。</br>\n",
     ">当一个 Future 对象 被等待，这意味着协程将保持等待直到该 Future 对象在其他地方操作完毕。</br>\n",
@@ -877,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.6. <a id='toc1_3_6_'></a>[concurrent.futures.Future对象](#toc0_)\n",
+    "### concurrent.futures.Future对象\n",
     "使用线程池、进程池实现异步操作时用到的对象。"
    ]
   },
@@ -1033,7 +1002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.7. <a id='toc1_3_7_'></a>[异步迭代器](#toc0_)\n",
+    "### 异步迭代器\n",
     "\n",
     "什么是异步迭代器？\n",
     "\n",
@@ -1192,12 +1161,87 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 异步上下文管理器\n",
     "此种对象通过定义__aenter__()和__aexit__()方法来对async with 语句中的环境进行控制。由PEP 492引入。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "class AsyncContextManager():\n",
+    "    def __init__(self,conn):\n",
+    "        self.conn=conn\n",
+    "    \n",
+    "    \n",
+    "    async def do_something(self):\n",
+    "        # 异步操作数据库\n",
+    "        return 666\n",
+    "    \n",
+    "    \n",
+    "    async def __aenter__(self):\n",
+    "        # 异步连接数据库    \n",
+    "        self.conn = await asyncio.sleep(1)\n",
+    "        return self\n",
+    "    \n",
+    "    \n",
+    "    async def __aexit__(self,exception_type,exception_value,exception_traceback):\n",
+    "        # 异步关闭数据库连接\n",
+    "        await asyncio.sleep(1)\n",
+    "        \n",
+    "\n",
+    "async def main():\n",
+    "    async with AsyncContextManager(\"mysql连接对象\") as f:\n",
+    "        result = await f.do_something()\n",
+    "        print(result)\n",
+    "\n",
+    "# asyncio.run(main())\n",
+    "await main()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## uvloop\n",
+    "是asyncio的事件循环替代方案，不支持windows系统。事件循环>默认asyncio的事件循环。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile test_uvloop.py\n",
+    "import asyncio\n",
+    "import uvloop\n",
+    "asyncio.set_event_loop_policy(uvloop.EventLoopPolicy())\n",
+    "\n",
+    "# 编写asyncio的代码，与之前写的一致。\n",
+    "\n",
+    "#* 内部的事件循环自动会变为uvloop\n",
+    "asyncio.run(...)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意：一个asgi->uvicorn内部使用的就是uvloop\n",
+    "\n",
+    "## 实战案例\n",
+    "\n",
+    "### 异步操作redis\n"
    ]
   }
  ],
