--- a/03core/2.4decorator.ipynb
+++ b/03core/2.4decorator.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,9 +161,9 @@
     "#### 第二波 ####\n",
     "def foo(num):\n",
     "    print(num)\n",
-    " \n",
+    "\n",
     "foo = lambda x: x + 1\n",
-    " \n",
+    "\n",
     "foo(1)  # 执行lambda表达式，而不再是原来的foo函数，因为foo这个名字被重新指向了另外一个匿名函数\n"
    ]
   },
@@ -625,15 +625,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'用户名不正确'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -648,7 +651,7 @@
     "        # 验证3\n",
     "        if input(\"请输入手机短信验证码:\") != \"7788\":\n",
     "            return \"验证码不正确\"\n",
-    "\n",
+    "        \n",
     "        func()\n",
     "\n",
     "    return inner\n",
@@ -776,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.15 ('study')",
    "language": "python",
    "name": "python3"
   },
@@ -1335,12 +1338,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af2924f10f5eb76fd65ccea448a69e80be7838e947e8a1ae982ab7073141c8a7"
+    "hash": "49fdd20b2b68a4dd8ebcbb061b9c04f8e52f6472af90d6159269a7c8abf5d944"
    }
   }
  },
