--- a/00Pratice/02advanced/03metaclass.ipynb
+++ b/00Pratice/02advanced/03metaclass.ipynb
@@ -26,25 +26,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "!<Monster>\n",
-      "ac: 18\n",
+      "<class '__main__.Monster'>\n",
+      "Monster(name = Cave spider, hp = [2, 6], ac = 16, attacks = ['BITE', 'HURT'])\n",
+      "!Monster\n",
+      "ac: 16\n",
       "attacks:\n",
       "- BITE\n",
       "- HURT\n",
       "hp:\n",
       "- 3\n",
       "- 6\n",
-      "name: zym2\n",
+      "name: Cave lizard\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "from os import name\n",
     "import yaml\n",
     "\n",
     "\n",
     "class Monster(yaml.YAMLObject):\n",
-    "    yaml_tag = \"Monster\"\n",
+    "    yaml_tag = u\"!Monster\"\n",
     "\n",
     "    def __init__(self, name, hp, ac, attacks):\n",
     "        self.name = name\n",
@@ -53,13 +56,19 @@
     "        self.attacks = attacks\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return \"{}(name = {}, hp = {}, ac = {}, attacks = {}\".format(self.__class__.__name__, self.name, self.hp, self.ac, self.attacks)\n",
+    "        return f\"{self.__class__.__name__}(name = {self.name}, hp = {self.hp}, ac = {self.ac}, attacks = {self.attacks})\"\n",
     "\n",
+    "data=yaml.load(\"\"\"\n",
+    "--- !Monster\n",
+    "name : Cave spider\n",
+    "hp : [2,6]\n",
+    "ac : 16\n",
+    "attacks : [BITE,HURT]\n",
+    "\"\"\",Loader=yaml.FullLoader)\n",
+    "print(type(data))\n",
+    "print(data)\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    Monster(name=\"zym\", hp=[2, 6], ac=16, attacks=[\"BITE\", \"HURT\"])\n",
-    "    print(yaml.dump(Monster(name=\"zym2\", hp=[\n",
-    "          3, 6], ac=18, attacks=[\"BITE\", \"HURT\"])))\n"
+    "print(yaml.dump(Monster(name='Cave lizard',hp=[3,6],ac=16,attacks=['BITE','HURT'])))\n"
    ]
   },
   {
@@ -124,11 +133,27 @@
     "    data = 1\n",
     "\n",
     "# python 实际上执行的是这段代码\n",
-    "# class=type(classname,superclasses,attributedict)\n",
+    "# class = type(classname,superclasses,attributedict)\n",
     "\n",
-    "# 这里等号右边type(classname,superclasses,attributedict)，就是type的__call__运算符重载，它会进一步调用：\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这里等号右边type(classname,superclasses,attributedict)，就是type的__call__运算符重载，它会进一步调用："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# type.__new__(typeclass,classname,superclasses,attributedict)\n",
-    "# type.__init__(class,classname,superclasses,attributedict)\n"
+    "# type.__init__(class,classname,superclasses,attributedict)"
    ]
   },
   {
@@ -140,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -148,10 +173,10 @@
      "output_type": "stream",
      "text": [
       "<class '__main__.MyClass'>\n",
-      "<__main__.MyClass object at 0x000001AF15FCCDC0>\n",
+      "<__main__.MyClass object at 0x00000165A3FBCE20>\n",
       "1\n",
       "<class '__main__.MyClass'>\n",
-      "<__main__.MyClass object at 0x000001AF15FB4DF0>\n",
+      "<__main__.MyClass object at 0x00000165A3EA87F0>\n",
       "1\n"
      ]
     }
@@ -202,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,11 +238,12 @@
       "MyMeta\n",
       "===>MyMeta.__init__\n",
       "Foo\n",
-      "{'__module__': '__main__', '__qualname__': 'Foo', 'yaml_tag': '!Foo', '__init__': <function Foo.__init__ at 0x000001AF16DF2F70>, '__new__': <function Foo.__new__ at 0x000001AF16DF2CA0>}\n",
+      "{'__module__': '__main__', '__qualname__': 'Foo', 'yaml_tag': '!Foo', '__init__': <function Foo.__init__ at 0x00000232D23F9A60>, '__new__': <function Foo.__new__ at 0x00000232D23F9C10>}\n",
       "!Foo\n",
       "===>MyMeta.__call__\n",
       "Foo.__new__\n",
-      "Foo.__init__\n"
+      "Foo.__init__\n",
+      "foo\n"
      ]
     }
    ],
@@ -235,10 +261,10 @@
     "        print(cls.__name__)\n",
     "        return type.__new__(cls, *args, **kwargs)\n",
     "\n",
-    "    def __call__(cls, *args, **kwargs):\n",
+    "    def __call__(self, *args, **kwargs):\n",
     "        print(\"===>MyMeta.__call__\")\n",
-    "        obj = cls.__new__(cls)\n",
-    "        cls.__init__(cls, *args, **kwargs)\n",
+    "        obj = self.__new__(self)\n",
+    "        self.__init__(self, *args, **kwargs)\n",
     "        return obj\n",
     "\n",
     "\n",
@@ -254,13 +280,14 @@
     "        return object.__new__(cls)\n",
     "\n",
     "\n",
-    "foo = Foo('foo')\n"
+    "foo = Foo('foo')\n",
+    "print(foo.name)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "study",
    "language": "python",
    "name": "python3"
   },
@@ -274,12 +301,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e42634819b8c191a5d07eaf23810ff32516dd8d3875f28ec3e488928fbd3c187"
+    "hash": "49fdd20b2b68a4dd8ebcbb061b9c04f8e52f6472af90d6159269a7c8abf5d944"
    }
   }
  },
