--- a/00Pratice/02advanced/09Python垃圾回收机制.ipynb
+++ b/00Pratice/02advanced/09Python垃圾回收机制.ipynb
@@ -1,11 +1,31 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# python垃圾回收机制"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "1. [python垃圾回收机制](#toc1_)    \n",
+    "1.1. [计数引用](#toc1_1_)    \n",
+    "1.2. [循环引用](#toc1_2_)    \n",
+    "1.3. [调试内存泄露](#toc1_3_)    \n",
+    "1.4. [总结](#toc1_4_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=true\n",
+    "\tanchor=true\n",
+    "\tflat=true\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. <a id='toc1_'></a>[python垃圾回收机制](#toc0_)"
    ]
   },
   {
@@ -21,11 +41,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 计数引用\n",
+    "## 1.1. <a id='toc1_1_'></a>[计数引用](#toc0_)\n",
     "Python中一切皆对象，因此，你所看到的一切变量，本质上都是对象的一个指针。\n",
     "\n",
     "当这个对象的引用计数（指针数）为0的时候，说明这个对象永不可达，自然它也就成为了垃圾，需要被回收。\n",
@@ -338,11 +357,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 循环引用\n",
+    "## 1.2. <a id='toc1_2_'></a>[循环引用](#toc0_)\n",
     "\n",
     "如果有两个对象，他们互相引用，并且不再被别的对象所引用，那么它应该被垃圾回收吗？"
    ]
@@ -434,11 +452,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 调试内存泄露"
+    "## 1.3. <a id='toc1_3_'></a>[调试内存泄露](#toc0_)"
    ]
   },
   {
@@ -532,11 +549,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 总结"
+    "## 1.4. <a id='toc1_4_'></a>[总结](#toc0_)"
    ]
   },
   {
