--- a/00Pratice/02advanced/03metaclass.ipynb
+++ b/00Pratice/02advanced/03metaclass.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,9 +238,8 @@
       "MyMeta\n",
       "===>MyMeta.__init__\n",
       "Foo\n",
-      "{'__module__': '__main__', '__qualname__': 'Foo', 'yaml_tag': '!Foo', '__init__': <function Foo.__init__ at 0x00000232D23F9A60>, '__new__': <function Foo.__new__ at 0x00000232D23F9C10>}\n",
+      "{'__module__': '__main__', '__qualname__': 'Foo', 'yaml_tag': '!Foo', '__init__': <function Foo.__init__ at 0x000001F230ADD8B0>, '__new__': <function Foo.__new__ at 0x000001F230ADD1F0>}\n",
       "!Foo\n",
-      "===>MyMeta.__call__\n",
       "Foo.__new__\n",
       "Foo.__init__\n",
       "foo\n"
@@ -261,11 +260,11 @@
     "        print(cls.__name__)\n",
     "        return type.__new__(cls, *args, **kwargs)\n",
     "\n",
-    "    def __call__(self, *args, **kwargs):\n",
-    "        print(\"===>MyMeta.__call__\")\n",
-    "        obj = self.__new__(self)\n",
-    "        self.__init__(self, *args, **kwargs)\n",
-    "        return obj\n",
+    "    # def __call__(self, *args, **kwargs):\n",
+    "    #     print(\"===>MyMeta.__call__\")\n",
+    "    #     obj = self.__new__(self)\n",
+    "    #     self.__init__(self, *args, **kwargs)\n",
+    "    #     return obj\n",
     "\n",
     "\n",
     "class Foo(metaclass=MyMeta):\n",
