--- a/03core/4.1元类metaclass.ipynb
+++ b/03core/4.1元类metaclass.ipynb
@@ -852,14 +852,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing test_metaclass.py\n"
+      "===>UpperAttrMetaClass.__new__\n",
+      "<class '__main__.UpperAttrMetaClass'>\n",
+      "Foo\n",
+      "(<class 'object'>,)\n",
+      "{'__module__': '__main__', '__qualname__': 'Foo', 'bar': 'bip'}\n",
+      "False\n",
+      "True\n",
+      "bip\n"
      ]
     }
    ],
@@ -951,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov  4 2022, 16:35:55) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
