--- a/03core/oop/面向对象编程VI.ipynb
+++ b/03core/oop/面向对象编程VI.ipynb
@@ -618,6 +618,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -626,8 +627,8 @@
     "构造一个对象的过程，比如：\n",
     "\n",
     "    person = Person(\"Jack\")\n",
-    "    1. person = object.\\_\\_new__(Person,\"Jack\")\n",
-    "    2. person.\\_\\_init__(\"Jack\")"
+    "    1. person = object.__new__(Person,\"Jack\")\n",
+    "    2. person.__init__(\"Jack\")"
    ]
   },
   {
