--- a/00Pratice/02advanced/14.mysql和日志系统.ipynb
+++ b/00Pratice/02advanced/14.mysql和日志系统.ipynb
@@ -1,25 +1,61 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DEEPIN安装mariadb\n",
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "1. [DEEPIN安装mariadb](#toc1_)    \n",
+    "2. [安装python连接mysql的驱动](#toc2_)    \n",
+    "3. [peewee](#toc3_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=true\n",
+    "\tanchor=true\n",
+    "\tflat=true\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. <a id='toc1_'></a>[DEEPIN安装mariadb](#toc0_)\n",
     "1. sudo apt install mariadb-server mariadb-client\n",
     "2. mysql -u root -p \n",
     "3. show databases;\n",
     "\n",
-    "# 安装python连接mysql的驱动\n",
+    "其他操作：\n",
+    "\n",
+    "重启数据库：</br>\n",
+    "service mysql restart\n",
+    "查看数据库状态：</br>\n",
+    "systemctl status mariadb\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. <a id='toc2_'></a>[安装python连接mysql的驱动](#toc0_)\n",
     "pip install mysqlclient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./00Pratice/02advanced/test.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile ./00Pratice/02advanced/test.py\n",
     "import MySQLdb\n",
     "\n",
     "\n",
@@ -57,6 +93,57 @@
     "\n",
     "test_pymysql()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. <a id='toc3_'></a>[peewee](#toc0_)\n",
+    "pip install peewee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./00Pratice/02advanced/test.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ./00Pratice/02advanced/test.py\n",
+    "import datetime\n",
+    "\n",
+    "import peewee\n",
+    "from peewee import *\n",
+    "\n",
+    "db = MySQLDatabase(\"editestdb\", host=\"myos\", user=\"editest\", passwd=\"test1234\")\n",
+    "db.connect()\n",
+    "\n",
+    "\n",
+    "class Price(peewee.Model):\n",
+    "    timestamp = peewee.DateField(default=datetime.date.today)\n",
+    "    BTCUSD = peewee.FloatField()\n",
+    "\n",
+    "    class Meta:\n",
+    "        database = db\n",
+    "\n",
+    "\n",
+    "def test_peewee():\n",
+    "    Price.create_table()\n",
+    "    price = Price(BTCUSD=\"11234.56\")\n",
+    "    price.save()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    Price.drop_table()\n",
+    "    test_peewee()\n"
+   ]
   }
  ],
  "metadata": {
@@ -75,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov  4 2022, 16:35:55) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
