--- a/00Pratice/02advanced/14.mysql和日志系统.ipynb
+++ b/00Pratice/02advanced/14.mysql和日志系统.ipynb
@@ -20,13 +20,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 1. <a id='toc1_'></a>[DEEPIN安装mariadb](#toc0_)\n",
     "1. sudo apt install mariadb-server mariadb-client\n",
-    "2. mysql -u root -p \n",
-    "3. show databases;\n",
+    "2. mysql_secure_installation\n",
+    "3. mysql -u root -p \n",
+    "4. show databases;\n",
     "\n",
     "其他操作：\n",
     "\n",
@@ -35,7 +37,17 @@
     "查看数据库状态：</br>\n",
     "systemctl status mariadb\n",
     "\n",
+    "create user 'setest'@'localhost' identified by 'test1234';\n",
     "\n",
+    "create user 'setest'@'%' identified by 'test1234';\n",
+    "\n",
+    "grant all privileges on `se_db`.* to 'setest'@'localhost' identified by 'test1234' with grant option;\n",
+    "\n",
+    "grant all privileges on `se_db`.* to 'setest'@'%' identified by 'test1234' with grant option;\n",
+    "\n",
+    "grant all privileges on *.* to 'root'@'%' identified by 'test1234' with grant option;\n",
+    "\n",
+    "flush privileges;\n",
     "\n",
     "# 2. <a id='toc2_'></a>[安装python连接mysql的驱动](#toc0_)\n",
     "pip install mysqlclient"
