--- a/03core/鱼c/函数-文档、类型注释、内省.ipynb
+++ b/03core/鱼c/函数-文档、类型注释、内省.ipynb
@@ -1,11 +1,30 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 函数文档\n"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "1. [函数文档](#toc1_)    \n",
+    "2. [类型注释](#toc2_)    \n",
+    "2.1. [使用Mypy模块来对静态类型检查。](#toc2_1_)    \n",
+    "3. [内省](#toc3_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=true\n",
+    "\tanchor=true\n",
+    "\tflat=true\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. <a id='toc1_'></a>[函数文档](#toc0_)\n"
    ]
   },
   {
@@ -92,11 +111,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 类型注释\n"
+    "# 2. <a id='toc2_'></a>[类型注释](#toc0_)\n"
    ]
   },
   {
@@ -245,11 +263,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 使用Mypy模块来对静态类型检查。\n",
+    "## 2.1. <a id='toc2_1_'></a>[使用Mypy模块来对静态类型检查。](#toc0_)\n",
     "pip install mypy\n",
     "\n",
     "Mypy 是 Python 中的静态类型检查器。Mypy 具有强大且易于使用的类型系统，具有很多优秀的特性，例如类型推断、泛型、可调用类型、元组类型、联合类型和结构子类型。\n",
@@ -284,11 +301,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 内省\n",
+    "# 3. <a id='toc3_'></a>[内省](#toc0_)\n",
     "\n",
     "在编程中，内省是在运行时确定对象类型的能力，这是 Python 的强项之一， Python 中的任何东西都是对象，Python 附带一些内置函数和模块来帮助我们检查这些对象"
    ]
