--- a/00Pratice/02advanced/03metaclass.ipynb
+++ b/00Pratice/02advanced/03metaclass.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,16 +238,19 @@
       "MyMeta\n",
       "===>MyMeta.__init__\n",
       "Foo\n",
-      "{'__module__': '__main__', '__qualname__': 'Foo', 'yaml_tag': '!Foo', '__init__': <function Foo.__init__ at 0x000001F230ADD8B0>, '__new__': <function Foo.__new__ at 0x000001F230ADD1F0>}\n",
+      "{'__module__': '__main__', '__qualname__': 'Foo', 'yaml_tag': '!Foo', '__init__': <function Foo.__init__ at 0x000002BD3430D700>, '__new__': <function Foo.__new__ at 0x000002BD34188D30>}\n",
       "!Foo\n",
       "Foo.__new__\n",
       "Foo.__init__\n",
-      "foo\n"
+      "Foo.__new__\n",
+      "Foo.__init__\n",
+      "foo1\n",
+      "foo2\n"
      ]
     }
    ],
    "source": [
-    "class MyMeta(type):\n",
+    "class MyMeta(type):  # * https://www.jianshu.com/p/2e2ee316cfd0\n",
     "    def __init__(self, name, bases, dic):\n",
     "        super().__init__(name, bases, dic)\n",
     "        print(\"===>MyMeta.__init__\")\n",
@@ -279,8 +282,10 @@
     "        return object.__new__(cls)\n",
     "\n",
     "\n",
-    "foo = Foo('foo')\n",
-    "print(foo.name)\n"
+    "foo1 = Foo(\"foo1\")\n",
+    "foo2 = Foo(\"foo2\")\n",
+    "print(foo1.name)\n",
+    "print(foo2.name)"
    ]
   }
  ],
