--- a/06dp/creational_patterns/singleton/singleton.ipynb
+++ b/06dp/creational_patterns/singleton/singleton.ipynb
@@ -1,15 +1,40 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 单例模式\n",
-    "## 意图\n",
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "1. [单例模式](#toc1_)    \n",
+    "1.1. [意图](#toc1_1_)    \n",
+    "1.2. [问题](#toc1_2_)    \n",
+    "1.3. [解决方案](#toc1_3_)    \n",
+    "1.4. [单例模式结构](#toc1_4_)    \n",
+    "1.5. [代码](#toc1_5_)    \n",
+    "1.6. [ 单例模式适合应用场景](#toc1_6_)    \n",
+    "1.7. [实现方式](#toc1_7_)    \n",
+    "1.8. [单例模式优缺点](#toc1_8_)    \n",
+    "1.9. [与其他模式的关系](#toc1_9_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=true\n",
+    "\tanchor=true\n",
+    "\tflat=true\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. <a id='toc1_'></a>[单例模式](#toc0_)\n",
+    "## 1.1. <a id='toc1_1_'></a>[意图](#toc0_)\n",
     "单例模式是一种创建型设计模式， 让你能够保证一个类只有一个实例， 并提供一个访问该实例的全局节点。\n",
     "\n",
-    "## 问题\n",
+    "## 1.2. <a id='toc1_2_'></a>[问题](#toc0_)\n",
     "单例模式同时解决了两个问题， 所以违反了单一职责原则：（修改一个类的原因只能有一个。尽量让每个类只负责软件中的一个功能，并将该功能完全封\n",
     "装（你也可称之为隐藏）在该类中。）\n",
     "1. 保证一个类只有一个实例。</br>\n",
@@ -40,11 +65,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 解决方案\n",
+    "## 1.3. <a id='toc1_3_'></a>[解决方案](#toc0_)\n",
     "\n",
     "所有单例的实现都包含以下两个相同的步骤：\n",
     "\n",
@@ -53,11 +77,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 单例模式结构"
+    "## 1.4. <a id='toc1_4_'></a>[单例模式结构](#toc0_)"
    ]
   },
   {
@@ -73,11 +96,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 代码"
+    "## 1.5. <a id='toc1_5_'></a>[代码](#toc0_)"
    ]
   },
   {
@@ -134,16 +156,103 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ./06dp/creational_patterns/singleton/main_safe.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ./06dp/creational_patterns/singleton/main_safe.py\n",
+    "from threading import Lock, Thread\n",
+    "\n",
+    "\n",
+    "class SingletonMeta(type):\n",
+    "    \"\"\"\n",
+    "    This is a thread-safe implementation of Singleton.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    _instances = {}\n",
+    "\n",
+    "    _lock: Lock = Lock()\n",
+    "    \"\"\"\n",
+    "    We now have a lock object that will be used to synchronize threads during\n",
+    "    first access to the Singleton.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __call__(cls, *args, **kwargs):\n",
+    "        \"\"\"\n",
+    "        Possible changes to the value of the `__init__` argument do not affect\n",
+    "        the returned instance.\n",
+    "        \"\"\"\n",
+    "        # Now, imagine that the program has just been launched. Since there's no\n",
+    "        # Singleton instance yet, multiple threads can simultaneously pass the\n",
+    "        # previous conditional and reach this point almost at the same time. The\n",
+    "        # first of them will acquire lock and will proceed further, while the\n",
+    "        # rest will wait here.\n",
+    "        with cls._lock:\n",
+    "            # The first thread to acquire the lock, reaches this conditional,\n",
+    "            # goes inside and creates the Singleton instance. Once it leaves the\n",
+    "            # lock block, a thread that might have been waiting for the lock\n",
+    "            # release may then enter this section. But since the Singleton field\n",
+    "            # is already initialized, the thread won't create a new object.\n",
+    "            if cls not in cls._instances:\n",
+    "                instance = super().__call__(*args, **kwargs)\n",
+    "                cls._instances[cls] = instance\n",
+    "        return cls._instances[cls]\n",
+    "\n",
+    "\n",
+    "class Singleton(metaclass=SingletonMeta):\n",
+    "    value: str = None\n",
+    "    \"\"\"\n",
+    "    We'll use this property to prove that our Singleton really works.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, value: str) -> None:\n",
+    "        self.value = value\n",
+    "\n",
+    "    def some_business_logic(self):\n",
+    "        \"\"\"\n",
+    "        Finally, any singleton should define some business logic, which can be\n",
+    "        executed on its instance.\n",
+    "        \"\"\"\n",
+    "\n",
+    "\n",
+    "def test_singleton(value: str) -> None:\n",
+    "    singleton = Singleton(value)\n",
+    "    print(singleton.value)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # The client code.\n",
+    "\n",
+    "    print(\"If you see the same value, then singleton was reused (yay!)\\n\"\n",
+    "          \"If you see different values, \"\n",
+    "          \"then 2 singletons were created (booo!!)\\n\\n\"\n",
+    "          \"RESULT:\\n\")\n",
+    "\n",
+    "    process1 = Thread(target=test_singleton, args=(\"FOO\",))\n",
+    "    process2 = Thread(target=test_singleton, args=(\"BAR\",))\n",
+    "    process1.start()\n",
+    "    process2.start()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  单例模式适合应用场景\n",
+    "## 1.6. <a id='toc1_6_'></a>[ 单例模式适合应用场景](#toc0_)\n",
     "如果程序中的某个类对于所有客户端只有一个可用的实例， 可以使用单例模式。\n",
     "\n",
     "如果你需要更加严格地控制全局变量， 可以使用单例模式。\n",
     "\n",
-    "## 实现方式\n",
+    "## 1.7. <a id='toc1_7_'></a>[实现方式](#toc0_)\n",
     "1. 在类中添加一个私有静态成员变量用于保存单例实例。\n",
     "\n",
     "2. 声明一个公有静态构建方法用于获取单例实例。\n",
@@ -154,7 +263,7 @@
     "\n",
     "5. 检查客户端代码， 将对单例的构造函数的调用替换为对其静态构建方法的调用。\n",
     "\n",
-    "## 单例模式优缺点"
+    "## 1.8. <a id='toc1_8_'></a>[单例模式优缺点](#toc0_)"
    ]
   },
   {
@@ -170,11 +279,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 与其他模式的关系"
+    "## 1.9. <a id='toc1_9_'></a>[与其他模式的关系](#toc0_)"
    ]
   },
   {
