--- a/tests/withpytest/01pytest框架.ipynb
+++ b/tests/withpytest/01pytest框架.ipynb
@@ -59,6 +59,71 @@
     "\n",
     "@pytest.mark.skipif"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipytest\n",
+    "ipytest.autoconfig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m======================================= test session starts =======================================\u001b[0m\n",
+      "platform win32 -- Python 3.9.15, pytest-7.2.0, pluggy-1.0.0\n",
+      "rootdir: d:\\study\\vsworkspace\\study_python\n",
+      "collected 2 items\n",
+      "\n",
+      "t_103ebc1341844f3697a248dbe4fdf6dd.py \u001b[33ms\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                     [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m================================== \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m1 skipped\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===================================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%ipytest -v \n",
+    "import sys\n",
+    "\n",
+    "import pytest\n",
+    "\n",
+    "from tests.domain.student import Student\n",
+    "\n",
+    "\n",
+    "def is_skip():\n",
+    "    return sys.platform.casefold() == \"win32\".casefold()\n",
+    "\n",
+    "\n",
+    "# @pytest.mark.skip(reason=\"expired\")\n",
+    "@pytest.mark.skipif(condition=is_skip(), reason=\"skip on windows\")\n",
+    "def test_student():\n",
+    "    print(\"testing student __int__\")\n",
+    "    # Action\n",
+    "    student = Student(id=1, name=\"Jack\")\n",
+    "\n",
+    "    # Assert\n",
+    "    assert student.id == 1\n",
+    "    assert student.name == \"Jack\"\n",
+    "\n",
+    "\n",
+    "class TestStudents:\n",
+    "    def test_student(self):\n",
+    "        # Action\n",
+    "        student = Student(id=1, name=\"Jack\")\n",
+    "\n",
+    "        # Assert\n",
+    "        assert student.id == 1\n",
+    "        assert student.name == \"Jack\"\n"
+   ]
   }
  ],
  "metadata": {
@@ -68,8 +133,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.15 (main, Nov  4 2022, 16:35:55) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
