--- a/tests/withpytest/03pytest的Fixture夹具.ipynb
+++ b/tests/withpytest/03pytest的Fixture夹具.ipynb
@@ -119,6 +119,25 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用usefixtures指定fixture\n",
+    "使用@pytest.mark.usefixtures('fixture1','fixtures2')标记函数或类。非常适合测试类。\n",
+    "\n",
+    "使用usefixtures和在测试方法中添加fixture参数，二者大体是差不多的。区别之一在于只有后者才能使用fixture的返回值。\n",
+    "\n",
+    "pytest test_scope.py::TestSomething\n",
+    "\n",
+    "## 为常用fixture添加autouse选项\n",
+    "\n",
+    "我们可以指定autouse=True选项，使作用域内的测试函数都运行该fixture，这与哪些需要多次运行、但不依赖任何的系统状态或外部函数的代码配合的很好。\n",
+    "\n",
+    "pytest test_autouse.py"
+   ]
   }
  ],
  "metadata": {
