--- a/tests/withpytest/04pytest内置Fixture.ipynb
+++ b/tests/withpytest/04pytest内置Fixture.ipynb
@@ -26,7 +26,24 @@
     "\n",
     "cd ch4/authors 查看conftest.py\n",
     "\n",
-    "pytest -sv authors/test_authors.py"
+    "pytest -sv authors/test_authors.py\n",
+    "\n",
+    "## 使用pytestconfig\n",
+    "cd /ch4/pytestconfig/conftest.py\n",
+    "\n",
+    "hook函数pytest_addoption添加配置选项\n",
+    "\n",
+    "pytestconfig获取配置选项\n",
+    "\n",
+    "pytest -s -q test_config.py::test_option\n",
+    "\n",
+    "pytest -s -q --myopt test_config.py::test_option\n",
+    "\n",
+    "pytest -s -q --myopt --foo baz test_config.py::test_option\n",
+    "\n",
+    "pytest -sv test_config.py::test_fixtures_for_options\n",
+    "\n",
+    "pytest -sv test_config.py::test_pytestconfig\n"
    ]
   }
  ],
