--- a/tests/withpytest/04pytest内置Fixture.ipynb
+++ b/tests/withpytest/04pytest内置Fixture.ipynb
@@ -98,7 +98,18 @@
     "### pytest --cache-show 显示缓存目录\n",
     "\n",
     "### cache的其他功能\n",
-    "ch4/cache/test_slower.py"
+    "ch4/cache/test_slower.py\n",
+    "\n",
+    "执行：\n",
+    "pytest -q --cache-clear test_slower.py\n",
+    "pytest -q --tb=line test_slower.py\n",
+    "pytest -q --cache-show\n",
+    "\n",
+    "改造后\n",
+    "ch4/cache/test_slower_2.py\n",
+    "pytest -q --cache-clear test_slower_2.py\n",
+    "pytest -q --tb=line test_slower_2.py\n",
+    "pytest -q --cache-show\n"
    ]
   }
  ],
